makes onlick handler designed by cheri

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="first-chart.js"></script>
-  <title>Chart</title>  
+  <title>Chart</title>
   </head>
 
   <body>
     <!--Div that will hold the pie chart-->
     <div id="chart_div"></div>
+<h2> Vote for shit</h2>
+    <button id="pineapple">Pineapple</button>
+    <button id="pepperoni">Pepperoni</button>
+    <button id="peppers">Peppers</button>
+    <button id="shrimp">Shrimp</button>
+    <button id="tomato">Tomato</button>
   </body>
 </html>
